@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add much needed verbosity to 'You must attach to an AsyncSubtest ...' errors
+
 0.000100  2018-02-13 21:41:30-08:00 America/Los_Angeles
 
     - No changes from last TRIAL
